--- a/API/01_API.csproj
+++ b/API/01_API.csproj
@@ -7,6 +7,7 @@
         <Company>Digital Excellence Fontys</Company>
         <LangVersion>8</LangVersion>
         <Version>1.1.0-beta</Version>
+        <UserSecretsId>8e8cae11-1fbe-4759-be13-52700c67135c</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
