Created the fontysgitlab datasource tests.

--- a/API/appsettingsapi.json
+++ b/API/appsettingsapi.json
@@ -33,7 +33,14 @@
             "Gitlab": {
                 "ClientId": "",
                 "ClientSecret": "",
-                "RedirectUri": ""
+                "RedirectUri": "",
+                "OauthUrl": ""
+            },
+            "FontysGitlab": {
+                "ClientId": "",
+                "ClientSecret": "",
+                "RedirectUri": "",
+                "OauthUrl": ""
             }
         },
         "RabbitMQ": {
