--- a/Data/06_Data.csproj
+++ b/Data/06_Data.csproj
@@ -11,6 +11,11 @@
         <EmbeddedResource Remove="Configurations\IdentityMigrations\**" />
         <None Remove="Configurations\IdentityMigrations\**" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Migrations\20210528120743_AddMultipleCallToActions.cs" />
+      <Compile Remove="Migrations\20210528120743_AddMultipleCallToActions.Designer.cs" />
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Bogus" Version="29.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
