--- a/API/appsettingsapi.json
+++ b/API/appsettingsapi.json
@@ -33,14 +33,7 @@
             "Gitlab": {
                 "ClientId": "",
                 "ClientSecret": "",
-                "RedirectUri": "",
-                "OauthUrl": ""
-            },
-            "FontysGitlab": {
-                "ClientId": "",
-                "ClientSecret": "",
-                "RedirectUri": "",
-                "OauthUrl": ""
+                "RedirectUri": ""
             }
         },
         "RabbitMQ": {
