--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -111,8 +111,8 @@ services:
       - App__Frontend__PostLogoutUriFrontend=https://staging.dex.software/
       - App__Frontend__ClientId=${FRONTEND_CLIENT_ID}
       - App__Frontend__ClientSecret=${FRONTEND_CLIENT_SECRET}
-      - App__swagger__RedirectUrisSwagger=https://api.staging.dex.software/oauth2-redirect.html
-      - App__swagger__PostLogoutUrisSwagger=https://api.staging.dex.software
+      - App__swagger__RedirectUrisSwagger=https://staging.dex.software/oauth2-redirect.html
+      - App__swagger__PostLogoutUrisSwagger=https://staging.dex.software
       - App__FfhictOIDC__ClientId=${FFHICTOIDC_CLIENT_ID}
       - App__FfhictOIDC__ClientSecret=${FFHICTOIDC_CLIENT_SECRET}
       - App__FfhictOIDC__RedirectUri=https://identity.staging.dex.software/external/callback/fhict
