--- a/Data/Dockerfile
+++ b/Data/Dockerfile
@@ -1,3 +1,3 @@
-FROM mcr.microsoft.com/mssql/server:2017-latest
+FROM microsoft/mssql-server-linux:2017-latest
 ENV MSSQL_SA_PASSWORD = ''
 ENV ACCEPT_EULA=Y
