--- a/ElasticSynchronizer/14_ElasticSynchronizer.csproj
+++ b/ElasticSynchronizer/14_ElasticSynchronizer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -8,7 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.10" />
-        <PackageReference Include="RestSharp" Version="106.11.4" />
+        <PackageReference Include="RestSharp" Version="106.12.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     </ItemGroup>
 
