--- a/IdentityServer/08_IdentityServer.csproj
+++ b/IdentityServer/08_IdentityServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -17,7 +17,7 @@
         <PackageReference Include="NetEscapades.Configuration.Validation" Version="2.0.0" />
         <PackageReference Include="Sentry.AspNetCore" Version="2.1.1" />
         <PackageReference Include="Sentry.Serilog" Version="2.1.1" />
-        <PackageReference Include="RestSharp" Version="106.11.4" />
+        <PackageReference Include="RestSharp" Version="106.12.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
         <PackageReference Include="System.Security.Principal.Windows" Version="4.5.0" />
     </ItemGroup>
