Created Registered User Warmup

--- a/IntegrationTests/15_IntegrationTests.csproj
+++ b/IntegrationTests/15_IntegrationTests.csproj
@@ -24,6 +24,8 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
+    <Folder Include="Implementations\B_Tests\B1_Guest\" />
+    <Folder Include="Implementations\B_Tests\B0_Administrator\" />
   </ItemGroup>
 
 </Project>
