--- a/IdentityServer/08_IdentityServer.csproj
+++ b/IdentityServer/08_IdentityServer.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8</LangVersion>
-        <Version>1.5.0-beta</Version>
+        <Version>1.7.0-beta</Version>
     </PropertyGroup>
 
     <ItemGroup>
