--- a/IntegrationTests/15_IntegrationTests.csproj
+++ b/IntegrationTests/15_IntegrationTests.csproj
@@ -31,8 +31,16 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.5" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\API\01_API.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\API\01_API.csproj" />
+    </ItemGroup>
+
+
+
+    <ItemGroup>
+        <Folder Include="Configuration\" />
+        <Folder Include="Implementations\B_Tests\B1_Guest\" />
+        <Folder Include="Implementations\B_Tests\B0_Administrator\" />
+    </ItemGroup>
 
 </Project>
