Pre-commit integration test project

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -21,6 +21,11 @@
             "ClientId": "dex-api",
             "ClientSecret": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
         },
+        "IntegrationTests": {
+            "DeXApiUrl": "https://localhost:5005",
+            "ClientId": "integration-test",
+            "ClientSecret": "testtest"
+        },
         "Frontend": {
             "RedirectUriFrontend": "http://localhost:4200/auth-callback",
             "RefreshUriFrontend": "http://localhost:4200/silent-refresh.html",
