--- a/API/01_API.csproj
+++ b/API/01_API.csproj
@@ -29,6 +29,8 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" /> <!-- 5.0.5 -->
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0-preview1.19506.1" />
         <PackageReference Include="Microsoft.OpenApi" Version="1.1.4" />
