--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -1,13 +1,21 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
-  "profiles": {
-    "Dex-API": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001"
+    "profiles": {
+        "Dex-API": {
+            "commandName": "Project",
+            "launchBrowser": true,
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "applicationUrl": "https://localhost:5001"
+        },
+        "Test": {
+            "commandName": "Project",
+            "launchBrowser": true,
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Test"
+            },
+            "applicationUrl": "https://localhost:5001"
+        }
     }
-  }
 }
