--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+    
     - uses: actions/checkout@v2
 
     - name: Setup .NET Core
@@ -30,26 +31,34 @@ jobs:
       
     - name: Run RabbitMQ Container
       run: docker-compose start rabbitmq
+      
+      
+      steps:
+      - script: 'start cmd.exe /c cd IdentityServer && dotnet run --launch-profile "Test"'
+        displayName: 'Open new Session to run dotnet run'
 
-    - name: Run Identity Server
-      run: |
-        cd IdentityServer
-        cmd.exe /c dotnet run --launch-profile 'Test' -d
-       
+        steps:
+      - script: 'start cmd.exe /c cd API && dotnet run --launch-profile "Test"'
+        displayName: 'Open new Session to run dotnet run'
+      
+    #- name: Run Identity Server
+    
+     # run: |
+      #  cd IdentityServer
+       # cmd.exe /c dotnet run --launch-profile 'Test' -d
               
-              
-    - name: Run API
-      run: |
-        cd API
-        cmd.exe /c dotnet run --launch-profile 'Test' -d
+   # - name: Run API
+     # run: |
+       # cd API
+       # cmd.exe /c dotnet run --launch-profile 'Test' -d
 
     
       
-    - name: Test
-      run: dotnet test --environment 'test' --no-restore --verbosity normal
-      env:
-        App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
-        App__SendGrid__EmailFrom: test@dex.software
+      - name: Test
+        run: dotnet test --environment 'test' --no-restore --verbosity normal
+        env:
+          App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
+          App__SendGrid__EmailFrom: test@dex.software
 
   integration-test:
     runs-on: ubuntu-18.04
