--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,18 +31,12 @@ jobs:
       
     - name: Run RabbitMQ Container
       run: docker-compose start rabbitmq
-      
-    - uses: actions/github-script@v5
-      id: startup
-      with:
-        script: cmd.exe /c cd IdentityServer && dotnet run --launch-profile 'Test' -d
 				
       
-    #- name: Run Identity Server
-    
-     # run: |
-      #  cd IdentityServer
-       # cmd.exe /c dotnet run --launch-profile 'Test' -d
+    - name: Run Identity Server
+      run: |
+        cd IdentityServer
+        cmd.exe /c dotnet run --launch-profile 'Test' -d
               
    # - name: Run API
      # run: |
