--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,6 +31,9 @@ jobs:
       
     - name: Run RabbitMQ Container
       run: docker-compose start rabbitmq
+      
+    - name: Run all
+      run: cd IdentityServer && dotnet run --launch-profile 'Test' -d && cd ../ && cd API && dotnet run --launch-profile 'Test' -d
                     
    # - name: Run API
      # run: |
