--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -32,13 +32,13 @@ jobs:
     - name: Run RabbitMQ Container
       run: docker-compose start rabbitmq
       
-    - name: Run all
-      run: cd IdentityServer && dotnet run --launch-profile 'Test' & && cd ../ && cd API && dotnet run --launch-profile 'Test' &
+    #- name: Run all
+      #run: cd IdentityServer && dotnet run --launch-profile 'Test' & && cd ../ && cd API && dotnet run --launch-profile 'Test' &
                     
-   # - name: Run API
-     # run: |
-       # cd API
-       # cmd.exe /c dotnet run --launch-profile 'Test' -d
+    - name: Run API
+      run: |
+         cd API
+         dotnet run --launch-profile 'Test' &
       
     - name: Test
       run: dotnet test --environment 'test' --no-restore --verbosity normal
