--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -52,8 +52,12 @@ jobs:
           
     - name: Trust certificates
       run: |
-          dotnet dev-certs https --clean
-          dotnet dev-certs https -ep ./dex-api.pfx -p xI90DrNea7M6UJFNDwip6t
+            dotnet dev-certs https --clean
+            dotnet dev-certs https -ep ./dex-api.pfx -p xI90DrNea7M6UJFNDwip6t
+            dotnet dev-certs https --trust
+      #run: |
+          #dotnet dev-certs https --clean
+          #dotnet dev-certs https -ep ./dex-api.pfx -p xI90DrNea7M6UJFNDwip6t
       
     - name: Test
       run: dotnet test --no-restore --verbosity normal
