--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -53,8 +53,7 @@ jobs:
     - name: Trust certificates
       run: |
             dotnet dev-certs https --clean
-            dotnet dev-certs https -ep ./dex-api.pfx -p xI90DrNea7M6UJFNDwip6t
-            dotnet dev-certs https --trust
+            dotnet dev-certs https --trust -ep ./dex-api.pfx -p xI90DrNea7M6UJFNDwip6t
       #run: |
           #dotnet dev-certs https --clean
           #dotnet dev-certs https -ep ./dex-api.pfx -p xI90DrNea7M6UJFNDwip6t
