--- a/Data/Dockerfile
+++ b/Data/Dockerfile
@@ -1,32 +1,15 @@
-ROM ubuntu:18.04
-
-##############################################################################
-# This forces the image to be build on every push!
-##############################################################################
+FROM ubuntu:18.04
 
 ARG CACHEBUST=0
-
-##############################################################################
-# Replace shell with bash so we can source files
-##############################################################################
 
 RUN rm /bin/sh && \
 	ln -s /bin/bash /bin/sh && \
 	mkdir -p /root/.nvm
-
-##############################################################################
-# Install dependencies from Ubuntu
-##############################################################################
-
 ENV NVM_DIR /root/.nvm
 ENV NODE_VERSION 10.15.3
 
 RUN apt-get update --fix-missing && \
 	apt-get install -y curl && \
-	##############################################################################
-	# Install: nvm, node and npm
-	# @see: http://stackoverflow.com/questions/25899912/install-nvm-in-docker
-	##############################################################################
 	curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash && \
 	source $NVM_DIR/nvm.sh && \
 	nvm install $NODE_VERSION && \
