--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - db
     environment:
       - ConnectionStrings__DefaultConnection=Server=db;Database=identity;User=sa;Password=Dexcelence!1;
-      - App__Self__IssuerUri=https://identity:5005
+      - App__Self__IssuerUri=https://localhost:5005
       - App__Api__DeXApiUrl=https://api:5001
       - ASPNETCORE_URLS=http://+:5004;https://+:5005;
       - ASPNETCORE_HTTPS_PORT=5005
