--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,7 +23,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test --no-restore --verbosity normal --filter FullyQualifiedName!~API.Tests
       env:
         App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
         App__SendGrid__EmailFrom: test@dex.software
@@ -41,6 +41,13 @@ jobs:
       uses: juliangruber/sleep-action@v1
       with:
         time: 90s
+        
+        
+    - name: XUnit integration tests
+      run: dotnet test --no-restore --verbosity normal --filter FullyQualifiedName~API.Tests
+      env:
+        App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
+        App__SendGrid__EmailFrom: test@dex.software
 
     - name: Setup node
       uses: actions/setup-node@v1
