--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,6 +167,26 @@ services:
     networks:
         rabbitmq-network:
         mssql-network:
+        
+        
+        
+  xunit:
+    container_name: xunit
+    restart: on-failure
+    build:
+      context: .
+      dockerfile: API.Tests/Dockerfile
+    depends_on:
+      - api
+    environment:
+      - ApiAddress=https://api:5001/
+      - IdentityAddress=http://identity:5004/
+
+      
+      
+    
+      
+    
 
 volumes:
   elasticsearch:  
