--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,9 +35,9 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Docker Compose
-      run: docker-compose up --build -d
+      run: docker-compose -f docker-compose-test.yml up --build
 
-    - name: Sleep for 45 seconds
+    - name: Sleep for 90 seconds
       uses: juliangruber/sleep-action@v1
       with:
         time: 90s
