--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,7 +35,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Docker Compose
-      run: docker-compose -f docker-compose-test.yml up --build
+      run: docker-compose -f docker-compose-test.yml up --build -d
 
     - name: Sleep for 90 seconds
       uses: juliangruber/sleep-action@v1
