--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -172,7 +172,7 @@ services:
         
   xunit:
     container_name: xunit
-    restart: on-failure
+    restart: on-failure:3
     build:
       context: .
       dockerfile: API.Tests/Dockerfile
@@ -181,9 +181,6 @@ services:
     environment:
       - ApiAddress=https://api:5001/
       - IdentityAddress=http://identity:5004/
-      - Config__RabbitMQ__Hostname=rabbitmq
-      - Config__RabbitMQ__Username=test
-      - Config__RabbitMQ__Password=test
     networks:
       mssql-network:
 
