--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,14 +36,17 @@ jobs:
     - uses: actions/checkout@v2
 
 
-    - name: XUnit Integration tests via Docker compose-test.yml
-      run: docker-compose -f docker-compose-test.yml up --build
+    - name: Docker compose up
+      run: docker-compose up --build
 
 
-    - name: Sleep for 20 seconds
+    - name: Sleep for 50 seconds
       uses: juliangruber/sleep-action@v1
       with:
-        time: 20s
+        time: 50s
+        
+    - name: Run XUnit container
+      run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network mssql-network dex-backend_xunit
     
 
     - name: Setup node
