--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,7 +46,10 @@ jobs:
         time: 50s
         
     - name: Run XUnit container
-      run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network mssql-network dex-backend_xunit
+      run: docker build api.tests
+        
+    - name: Run XUnit container
+      run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network  dex-backend_mssql-network dex-backend_xunit
     
 
     - name: Setup node
