--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,7 +5,7 @@ on:
     branches: [ develop, master ]
 
 jobs:
-  unit-tests:
+  Unit-Tests:
     runs-on: ubuntu-18.04
 
     steps:
@@ -29,7 +29,7 @@ jobs:
         App__SendGrid__EmailFrom: test@dex.software
 
 
-  XUnit_And_Postman_Integration-tests:
+  XUnit-Postman-Integration-Tests:
     runs-on: ubuntu-18.04
 
     steps:
