--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -45,10 +45,10 @@ jobs:
       with:
         time: 50s
         
-    - name: Run XUnit container
+    - name: Build Docker XUnit image
       run: |
-        cd ./api.tests
-        docker build .
+        cd API.Tests
+        docker build . -t dex-backend_xunit
         
     - name: Run XUnit container
       run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network  dex-backend_mssql-network dex-backend_xunit
