--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -47,6 +47,7 @@ jobs:
         
     - name: Build Docker XUnit image
       run: |
+      working-directory: API.Tests
         cd API.Tests
         docker build . -t dex-backend_xunit
         
