--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -45,10 +45,24 @@ jobs:
       with:
         time: 50s
         
-    - name: Build Docker XUnit image
-      run: |
-        cd ./API.Tests
-        docker build . -t dex-backend_xunit
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+      
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD  }}
+      
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: ./API.Tests
+        push: true
+        tags: dex-backend_xunit:latest
         
     - name: Run XUnit container
       run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network  dex-backend_mssql-network dex-backend_xunit
