--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -44,25 +44,9 @@ jobs:
       uses: juliangruber/sleep-action@v1
       with:
         time: 1s
-        
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-      
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD  }}
-      
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: ./API.Tests
-        push: false
-        tags: dex-backend_xunit
+    
+    - name: Docker build XUnit
+      run: docker build -t dex-backend_xunit -f API.Tests/Dockerfile .
         
     - name: Run XUnit container
       run: docker run -e "ApiAddress=https://api:5001/" -e "IdentityAddress=http://identity:5004/" --network  dex-backend_mssql-network dex-backend_xunit
