--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,8 +93,8 @@ services:
       - App__Elastic__Username=elastic
       - App__Elastic__Password=changeme
       - App__Elastic__IndexUrl=projects/ 
-      - App__SendGrid__EmailFrom=${App__SendGrid__EmailFrom}
-      - App__SendGrid__ApiKey=${App__SendGrid__ApiKey}
+      - App__SendGrid__EmailFrom=noreply@dex.software
+      - App__SendGrid__ApiKey=test
     networks:
       mssql-network:
       rabbitmq-network:
