Revert "Update run-tests.yml"
This reverts commit 05f896506765c35e9d24a8549693957fa7aadba8.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,7 +37,7 @@ jobs:
 
 
     - name: Docker compose up
-      run: docker-compose up --build
+      run: docker-compose up --build -d
 
 
     - name: Sleep for 90 seconds
